@@ -1,6 +1,6 @@
 Package: digest
-Version: 0.6.2
-Date: $Date: 2013-01-25 08:42:35 -0600 (Fri, 25 Jan 2013) $
+Version: 0.6.3
+Date: $Date: 2013-02-16 06:34:23 -0600 (Sat, 16 Feb 2013) $
 Author: Dirk Eddelbuettel <edd@debian.org> with contributions by
         Antoine Lucas, Jarek Tuszynski, Henrik Bengtsson, Simon
         Urbanek, Mario Frasca, Bryan Lewis, Murray Stokely, Hannes
@@ -29,6 +29,7 @@ Description: The digest package provides a function 'digest()' for the
 Depends: R (>= 2.4.1)
 License: GPL-2
 URL: http://dirk.eddelbuettel.com/code/digest.html
-Packaged: 2013-01-25 17:33:37.284896 UTC; edd
+Packaged: 2013-02-16 12:35:57.046452 UTC; edd
+NeedsCompilation: yes
 Repository: CRAN
-Date/Publication: 2013-01-25 18:44:04
+Date/Publication: 2013-02-16 16:34:19
